--- a/pom.xml
+++ b/pom.xml
@@ -223,14 +223,6 @@
       <version>5.1.0</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
-
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.7</version>
-    </dependency>
-
     <!-- Unirest parts -->
 
     <dependency>
@@ -252,6 +244,35 @@
       <artifactId>commons-codec</artifactId>
       <version>1.10</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.redfish4ktc.soapui</groupId>
+      <artifactId>soapui</artifactId>
+      <version>4.6.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>3.3.2</version>
+    </dependency>
+
+    <!-- mina.apache.org/ftpserver-project/ -->
+
+    <dependency>
+      <groupId>org.apache.ftpserver</groupId>
+      <artifactId>ftpserver-core</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.ftpserver</groupId>
+      <artifactId>ftplet-api</artifactId>
+      <version>1.1.1</version>
     </dependency>
 
   </dependencies>
