--- a/pom.xml
+++ b/pom.xml
@@ -275,5 +275,13 @@
       <version>1.1.1</version>
     </dependency>
 
+    <!-- commons.net.ssh -->
+
+    <dependency>
+      <groupId>com.hierynomus</groupId>
+      <artifactId>sshj</artifactId>
+      <version>0.23.0</version>
+    </dependency>
+
   </dependencies>
 </project>
