--- a/pom.xml
+++ b/pom.xml
@@ -283,5 +283,11 @@
       <version>0.23.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.37</version>
+    </dependency>
+
   </dependencies>
 </project>
