--- a/pom.xml
+++ b/pom.xml
@@ -289,5 +289,13 @@
       <version>5.1.37</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+
   </dependencies>
 </project>
